--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,11 +36,15 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.2
+  excel: ^2.0.0-null-safety-3
   flutter_modular: any
   hive: ^2.0.4
   hive_flutter: ^1.0.0
   intl: ^0.17.0
   mobx: ^2.0.1
+  path: ^1.8.0
+  path_provider: ^2.0.2
+  share_plus: ^2.1.4
 
 dev_dependencies:
   flutter_test:
