publish data setted

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.pedrovmc.registros_aba">
    <application
-        android:label="registros_aba"
+        android:label="Agile Aba"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
