--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,12 @@ dev_dependencies:
     sdk: flutter
   build_runner: ^2.0.1
   hive_generator: ^1.1.0
+  flutter_launcher_icons: "^0.9.0"
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/app_logo.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
