--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   path: ^1.8.0
   path_provider: ^2.0.2
   share_plus: ^2.1.4
+  flutter_typeahead: ^3.1.3
 
 dev_dependencies:
   flutter_test:
@@ -52,6 +53,7 @@ dev_dependencies:
   build_runner: ^2.0.1
   hive_generator: ^1.1.0
   flutter_launcher_icons: "^0.9.0"
+  
 
 flutter_icons:
   android: true
